hphp/hack/test/typecheck/classname/new_generic.php.exp
File "new_generic.php", line 13, characters 3-16:
  Tobj
  where Tobj as \C<Targ>
File "new_generic.php", line 18, characters 3-32:
  C<int>
File "new_generic.php", line 19, characters 3-38:
  C<int>
File "new_generic.php", line 19, characters 29-36:
Invalid argument (Typing[4110])
File "new_generic.php", line 17, characters 35-37:
Expected int
File "new_generic.php", line 19, characters 29-36:
But got string
